add byzantine test script
reduce timeoutLoopTimes

enable set timeout from ENV

increase memory space of unit test

fix test_txs_wal

--- a/byzantine/generators.toml
+++ b/byzantine/generators.toml
@@ -1,6 +1,6 @@
 interval = 500
 [[list]]
-msg_type = { SendProposal = "Valid" }     # not cause bugs
+msg_type = { SendProposal = "Valid" }     
 probability = 0.01
 num_range = [1, 2]
 priority = "High"
@@ -9,68 +9,68 @@ priority = "High"
 ##### NewTx #####
 #################
 [[list]]
-msg_type = { NewTxs = "InvalidStruct" }     # not cause bugs
+msg_type = { NewTxs = "InvalidStruct" }
 probability = 0.01
 num_range = [1, 10]
 priority = "Normal"
 
 [[list]]
-msg_type = { NewTxs = "InvalidHash" }    ##### will cause panic
-probability = 0.2
+msg_type = { NewTxs = "InvalidHash" }
+probability = 1.0
 num_range = [1, 10]
 priority = "Normal"
 
 [[list]]
-msg_type = { NewTxs = "InvalidSig" }    ##### will cause panic
-probability = 0.2
+msg_type = { NewTxs = "InvalidSig" }
+probability = 1.0
 num_range = [1, 10]
 priority = "Normal"
 
 [[list]]
-msg_type = { NewTxs = "InvalidChainID" }   ##### will cause panic
-probability = 0.2
+msg_type = { NewTxs = "InvalidChainID" }
+probability = 1.0
 num_range = [1, 10]
 priority = "Normal"
 
 [[list]]
-msg_type = { NewTxs = "InvalidCyclesPrice" }    ##### will cause panic
-probability = 0.2
+msg_type = { NewTxs = "InvalidCyclesPrice" }
+probability = 1.0
 num_range = [1, 10]
 priority = "Normal"
 
 [[list]]
-msg_type = { NewTxs = "InvalidCyclesLimit" }      ##### will cause panic
-probability = 0.2
+msg_type = { NewTxs = "InvalidCyclesLimit" }
+probability = 1.0
 num_range = [1, 10]
 priority = "Normal"
 
 [[list]]
-msg_type = { NewTxs = "InvalidNonceOfRandLen" }     ##### will cause panic, should wait for a little long time
-probability = 0.2
+msg_type = { NewTxs = "InvalidNonceOfRandLen" }
+probability = 1.0
 num_range = [1, 10]
 priority = "Normal"
 
 [[list]]
-msg_type = { NewTxs = "InvalidNonceDup" }      ##### will cause panic
-probability = 0.2
+msg_type = { NewTxs = "InvalidNonceDup" }
+probability = 1.0
 num_range = [1, 10]
 priority = "Normal"
 
 [[list]]
-msg_type = { NewTxs = "InvalidRequest" }      ##### will cause panic
-probability = 0.2
+msg_type = { NewTxs = "InvalidRequest" }
+probability = 1.0
 num_range = [1, 10]
 priority = "Normal"
 
 [[list]]
-msg_type = { NewTxs = "InvalidTimeout" }      ##### will cause panic
-probability = 0.2
+msg_type = { NewTxs = "InvalidTimeout" }
+probability = 1.0
 num_range = [1, 10]
 priority = "Normal"
 
 [[list]]
-msg_type = { NewTxs = "InvalidSender" }        # not cause bugs
-probability = 0.2
+msg_type = { NewTxs = "InvalidSender" }
+probability = 1.0
 num_range = [1, 10]
 priority = "Normal"
 
@@ -78,30 +78,30 @@ priority = "Normal"
 ###### RecvProposal #####
 #########################
 [[list]]
-req_end = "/gossip/consensus/signed_proposal"       # not cause bugs
+req_end = "/gossip/consensus/signed_proposal"
 msg_type = { RecvProposal = "InvalidHeight" }
-probability = 0.2
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-req_end = "/gossip/consensus/signed_proposal"      # not cause bugs
+req_end = "/gossip/consensus/signed_proposal"
 msg_type = { RecvProposal = "InvalidHash" }
-probability = 0.2
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-req_end = "/gossip/consensus/signed_proposal"      # not cause bugs
+req_end = "/gossip/consensus/signed_proposal"
 msg_type = { RecvProposal = "NotExistTxs" }
-probability = 0.2
+probability = 1.0
 num_range = [1, 1000]
 priority = "High"
 
 [[list]]
-req_end = "/gossip/consensus/signed_proposal"      # not cause bugs
+req_end = "/gossip/consensus/signed_proposal"
 msg_type = { RecvProposal = "InvalidStruct" }
-probability = 0.2
+probability = 1.0
 num_range = [1, 2]
 priority = "High"
 
@@ -109,146 +109,146 @@ priority = "High"
 ###### SendProposal #####
 #########################
 [[list]]
-msg_type = { SendProposal = "InvalidStruct" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidStruct" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidChainId" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidChainId" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidPrevHash" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidPrevHash" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidHeight" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidHeight" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidExecHeight" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidExecHeight" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidTimestamp" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidTimestamp" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidOrderRoot" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidOrderRoot" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidSignedTxsHash" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidSignedTxsHash" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidConfirmRoot" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidConfirmRoot" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidStateRoot" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidStateRoot" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidReceiptRoot" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidReceiptRoot" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidCyclesUsed" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidCyclesUsed" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 #
 [[list]]
-msg_type = { SendProposal = "InvalidBlockProposer" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidBlockProposer" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidProof" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidProof" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidVersion" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidVersion" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidValidators" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidValidators" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidTxHash" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidTxHash" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidSig" }     # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidSig" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidProposalHeight" }   # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidProposalHeight" }
+probability = 1.0
+num_range = [1, 10]
+priority = "High"
+
+[[list]]
+msg_type = { SendProposal = "InvalidRound" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 #[[list]]
-#msg_type = { SendProposal = "InvalidRound" }    # ##### will broken liveness
-#probability = 0.2
+#msg_type = { SendProposal = "InvalidContentStruct" }     ## Cause panic
+#probability = 1.0
 #num_range = [1, 10]
 #priority = "High"
 
 #[[list]]
-#msg_type = { SendProposal = "InvalidContentStruct" }   ##### will cause panic
-#probability = 0.2
-#num_range = [1, 10]
-#priority = "High"
-
-#[[list]]
-#msg_type = { SendProposal = "InvalidBlockHash" }    ##### will cause panic
-#probability = 0.2
+#msg_type = { SendProposal = "InvalidBlockHash" }     ## Cause panic
+#probability = 1.0
 #num_range = [1, 10]
 #priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidLock" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidLock" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendProposal = "InvalidProposalProposer" }    # not cause bugs
-probability = 0.2
+msg_type = { SendProposal = "InvalidProposalProposer" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
@@ -256,38 +256,38 @@ priority = "High"
 #### SendVote #####
 ###################
 [[list]]
-msg_type = { SendVote = "InvalidStruct" }    # not cause bugs
-probability = 0.2
+msg_type = { SendVote = "InvalidStruct" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendVote = "InvalidHeight" }    # not cause bugs
-probability = 0.2
+msg_type = { SendVote = "InvalidHeight" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendVote = "InvalidRound" }    # not cause bugs
-probability = 0.2
+msg_type = { SendVote = "InvalidRound" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendVote = "InvalidBlockHash" }    # not cause bugs
-probability = 0.2
+msg_type = { SendVote = "InvalidBlockHash" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendVote = "InvalidSig" }    # not cause bugs
-probability = 0.2
+msg_type = { SendVote = "InvalidSig" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendVote = "InvalidVoter" }    # not cause bugs
-probability = 0.2
+msg_type = { SendVote = "InvalidVoter" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
@@ -295,38 +295,38 @@ priority = "High"
 #### SendQC #####
 #################
 [[list]]
-msg_type = { SendQC = "InvalidStruct" }   # not cause bugs
-probability = 0.2
+msg_type = { SendQC = "InvalidStruct" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendQC = "InvalidHeight" }   # not cause bugs
-probability = 0.2
+msg_type = { SendQC = "InvalidHeight" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendQC = "InvalidRound" }   # not cause bugs
-probability = 0.2
+msg_type = { SendQC = "InvalidRound" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendQC = "InvalidBlockHash" }   # not cause bugs
-probability = 0.2
+msg_type = { SendQC = "InvalidBlockHash" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendQC = "InvalidSig" }   # not cause bugs
-probability = 0.2
+msg_type = { SendQC = "InvalidSig" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendQC = "InvalidLeader" }   # not cause bugs
-probability = 0.2
+msg_type = { SendQC = "InvalidLeader" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
@@ -335,38 +335,38 @@ priority = "High"
 ####################
 
 [[list]]
-msg_type = { SendChoke = "InvalidStruct" }   # not cause bugs
-probability = 0.2
+msg_type = { SendChoke = "InvalidStruct" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendChoke = "InvalidHeight" }   # not cause bugs
-probability = 0.2
+msg_type = { SendChoke = "InvalidHeight" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendChoke = "InvalidRound" }   # not cause bugs
-probability = 0.2
+msg_type = { SendChoke = "InvalidRound" }
+probability = 1.0
+num_range = [1, 10]
+priority = "High"
+
+#[[list]]
+#msg_type = { SendChoke = "InvalidFrom" }     ## Break liveness
+#probability = 1.0
+#num_range = [1, 10]
+#priority = "High"
+
+[[list]]
+msg_type = { SendChoke = "InvalidSig" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
-msg_type = { SendChoke = "InvalidFrom" }   # not cause bugs
-probability = 0.2
-num_range = [1, 10]
-priority = "High"
-
-[[list]]
-msg_type = { SendChoke = "InvalidSig" }   # not cause bugs
-probability = 0.2
-num_range = [1, 10]
-priority = "High"
-
-[[list]]
-msg_type = { SendChoke = "InvalidAddress" }   # not cause bugs
-probability = 0.2
+msg_type = { SendChoke = "InvalidAddress" }
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
@@ -374,8 +374,8 @@ priority = "High"
 #### SendHeight #####
 #####################
 [[list]]
-msg_type = "SendHeight"   # not cause bugs
-probability = 0.2
+msg_type = "SendHeight"
+probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
@@ -385,70 +385,70 @@ priority = "High"
 
 [[list]]
 req_end = "/rpc_call/mempool/pull_txs"
-msg_type = { PullTxs = "InvalidStruct" }     # not cause bugs
+msg_type = { PullTxs = "InvalidStruct" }
 probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
 req_end = "/rpc_call/mempool/pull_txs"
-msg_type = { PullTxs = "InvalidHash" }    # not cause bugs
+msg_type = { PullTxs = "InvalidHash" }
 probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
 req_end = "/rpc_call/mempool/pull_txs"
-msg_type = { PullTxs = "InvalidSig" }    # not cause bugs
+msg_type = { PullTxs = "InvalidSig" }
 probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
 req_end = "/rpc_call/mempool/pull_txs"
-msg_type = { PullTxs = "InvalidChainID" }   # not cause bugs
+msg_type = { PullTxs = "InvalidChainID" }
 probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
 req_end = "/rpc_call/mempool/pull_txs"
-msg_type = { PullTxs = "InvalidCyclesPrice" }    # not cause bugs
+msg_type = { PullTxs = "InvalidCyclesPrice" }
 probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
 req_end = "/rpc_call/mempool/pull_txs"
-msg_type = { PullTxs = "InvalidCyclesLimit" }      # not cause bugs
+msg_type = { PullTxs = "InvalidCyclesLimit" }
 probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
 req_end = "/rpc_call/mempool/pull_txs"
-msg_type = { PullTxs = "InvalidNonceOfRandLen" }     # not cause bugs
+msg_type = { PullTxs = "InvalidNonceOfRandLen" }
 probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
 req_end = "/rpc_call/mempool/pull_txs"
-msg_type = { PullTxs = "InvalidRequest" }      # not cause bugs
+msg_type = { PullTxs = "InvalidRequest" }
 probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
 req_end = "/rpc_call/mempool/pull_txs"
-msg_type = { PullTxs = "InvalidTimeout" }      # not cause bugs
+msg_type = { PullTxs = "InvalidTimeout" }
 probability = 1.0
 num_range = [1, 10]
 priority = "High"
 
 [[list]]
 req_end = "/rpc_call/mempool/pull_txs"
-msg_type = { PullTxs = "InvalidSender" }        # not cause bugs
+msg_type = { PullTxs = "InvalidSender" }
 probability = 1.0
 num_range = [1, 10]
 priority = "High"
