chore: upgrade log4rs

--- a/common/logger/Cargo.toml
+++ b/common/logger/Cargo.toml
@@ -9,5 +9,5 @@ repository = "https://github.com/nervosnetwork/muta"
 
 [dependencies]
 log = "0.4"
-log4rs = "0.8"
+log4rs = { version = "0.13", features = ["all_components", "file", "yaml_format"] }
 json = "0.12"
