--- a/common/logger/Cargo.toml
+++ b/common/logger/Cargo.toml
@@ -11,3 +11,6 @@ repository = "https://github.com/nervosnetwork/muta"
 log = "0.4"
 log4rs = { version = "0.13", features = ["all_components", "file", "yaml_format"] }
 json = "0.12"
+serde = "1.0"
+serde_derive = "1.0"
+chrono = "0.4"
