change(logger): use roller to limit log file size

--- a/devtools/chain/config.toml
+++ b/devtools/chain/config.toml
@@ -42,6 +42,7 @@ log_to_console = true
 console_show_file_and_line = false
 log_path = "logs/"
 log_to_file = true
+file_size_limit = 1073741824 # 1 GiB
 metrics = true
 # you can specify log level for modules with config below
 # modules_level = { "overlord::state::process" = "debug", core_consensus = "error" }
