--- a/common/logger/Cargo.toml
+++ b/common/logger/Cargo.toml
@@ -9,5 +9,8 @@ repository = "https://github.com/nervosnetwork/muta"
 
 [dependencies]
 log = "0.4"
-log4rs = "0.8"
+log4rs = { version = "0.13", features = ["all_components", "file", "yaml_format"] }
 json = "0.12"
+serde = "1.0"
+serde_derive = "1.0"
+chrono = "0.4"
