--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -18,7 +18,7 @@ futures = { version = "0.3", features = ["async-await"] }
 futures-timer = "3.0"
 hex = "0.4"
 log = "0.4"
-overlord = { git = "https://github.com/nervosnetwork/overlord", rev = "42a5f53" }
+overlord = "0.2"
 parking_lot = "0.11"
 prost = "0.6"
 rlp = "0.4"
