--- a/byzantine/Cargo.toml
+++ b/byzantine/Cargo.toml
@@ -19,7 +19,7 @@ core-storage = { path = "../core/storage" }
 core-mempool = { path = "../core/mempool" }
 core-network = { path = "../core/network" }
 core-consensus = { path = "../core/consensus" }
-overlord = { git = "https://github.com/nervosnetwork/overlord", rev = "42a5f53" }
+overlord = "0.2"
 
 binding-macro = { path = "../binding-macro" }
 framework = { path = "../framework" }
