--- a/common/channel/Cargo.toml
+++ b/common/channel/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "common-channel"
-version = "0.2.0-rc"
+version = "0.2.0-rc.2"
 authors = ["Muta Dev <muta@nervos.org>"]
 edition = "2018"
 repository = "https://github.com/nervosnetwork/muta"
