--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "core-consensus"
-version = "0.2.0-rc"
+version = "0.2.0-rc.2"
 authors = ["Muta Dev <muta@nervos.org>"]
 edition = "2018"
 repository = "https://github.com/nervosnetwork/muta"
