--- a/core/api/Cargo.toml
+++ b/core/api/Cargo.toml
@@ -26,3 +26,10 @@ lazy_static = "1.4"
 num_cpus = "1.12"
 log = "0.4"
 openssl = "0.10"
+pprof = { version = "0.3", optional = true, features = ["flamegraph", "protobuf"] }
+url = "2.1"
+tokio = { version = "0.2", features = [ "time" ] }
+
+[features]
+default = []
+dump_profile = [ "pprof" ]
