--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/nervosnetwork/muta"
 async-trait = "0.1"
 bincode = "1.3"
 cita_trie = "2.0"
+json = "0.12"
 creep = "0.2"
 derive_more = "0.99"
 futures = { version = "0.3", features = ["async-await"] }
